# nnetflow

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  RELEASE_DRAFT.md  classification_example.py  classification_test.py  compare_nnetflow_pytorch_all.py  compare_nnetflow_pytorch_bigdata.py  compare_nnetflow_pytorch_conv2d.py  compare_nnetflow_pytorch_regression.py  example.py  install.sh  mypy.ini  pyproject.toml  regression_problem_example.py  requirements.dev  setup.py  test_classification.py  test_improved_mlp.py  test_mlp_run.py  test_regression.py  test_train_cifar10.py  testing.py
.github/workflows/: pypi-deploy.yml  pypi-release.yml  tests.yml
chainflow/: engine.py  nn.py
core/: commando.sh  mat_mul.c  mat_mul_module.c  setup.py  test.py
docs/: api.md  index.md  usage.md
examples/: README.md  classification_torch_vs_nnetflow.py  gpt2.ipynb  gpt2.py  nb_example.ipynb  pytorch_vs_nnetflow.py  regression_torch_vs_nnetflow.py  viz.ipynb
nbs/: engine_performance.ipynb  test_engine.ipynb
nnetflow/: __init__.py  cuda.py  device.py  engine.py  layers.py  losses.py  module.py  nn.py  optim.py  requalizers.py  scheduler.py  utils.py  visualize.py
nnetflow/core/: blas_helpers.hpp  device.hpp  tensor_cuda.cu  tensor_cuda_pybind.cpp
nnetflow/core/optim/: sgd.cpp
nnetflow/experimental/: normalization.py
nnetflow/init/: initializers.py
numpyflow/: nn.py
play/: ccn.py
tests/: test_dtypes.py  test_engine.py  test_linear.py  test_lstm.py  test_nn.py  test_rnn.py  test_tensor_and_layers.py
